turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:15: error: identifier expected but integer literal found.
var T = new Array(Array[2])
                        ^Turmite:105: error: ']' expected but '}' found.
}
^